--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ImportacionDiarios/_GridViewPartial_ImportacionDiarios.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ImportacionDiarios/_GridViewPartial_ImportacionDiarios.cshtml
@@ -151,8 +151,8 @@
             });
         });
 
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_debe").DisplayFormat = "Debe {0:c2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_haber").DisplayFormat = "Haber {0:c2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_ValorDebe").DisplayFormat = "Debe {0:c2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_ValorHaber").DisplayFormat = "Haber {0:c2}";
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
