--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ImportacionDiarios/_CmbCuenta.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ImportacionDiarios/_CmbCuenta.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ImportacionDiarios", Action = "ImportacionDiarios", Area = "Contabilidad" };
+        settings.CallbackRouteValues = new { Controller = "ImportacionDiarios", Action = "CmbCuenta", Area = "Contabilidad" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pc_Cuenta";
