--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosAprobacion/Index.cshtml
@@ -146,8 +146,9 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                if (data == false) {
-                    alert("Parametrizar cuentas contables en tipo de orden de pago por empresa");
+                if (data != "") {
+                    alert(data);
+                    $("#btn_aprobar").attr("disabled", false);
                 }
                 else {
                     $("#myform").submit();
