--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index2.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index2.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Nóminas procesadas/Cerrada/Contabilizadas";
+    ViewBag.Title = "Nóminas por rol";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
