--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
@@ -25,30 +25,33 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
-
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="IdProveedor">Empleado*</label>
                     @Html.Partial("_CmbEmpleado_prestamos", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
-
-
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="IdRubro">Rubro*</label>
                     @Html.Partial("_CmbRubro_Prestamos", Model)
                     @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    @Html.DevExpress().CheckBoxFor(q => q.GeneraOP, settings =>
+                       {
+                           settings.Name = "GeneraOP";
+                           settings.Text = "Genera O.P";
+                       }).GetHtml()
+                </div>
+            </div>
         </div>
     </div>
+
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -117,12 +120,12 @@
                     <div class="form-group">
                         <label for="descuento_men_quin">Descuentos</label>
                         @Html.DevExpress().RadioButtonFor(q => q.descuento_men_quin, settings =>
-                   {
-                       settings.Name = "descuento_men_quin";
-                       settings.GroupName = "formapao";
-                       settings.Text = "Quincena y fin de mes";
+                           {
+                               settings.Name = "descuento_men_quin";
+                               settings.GroupName = "formapao";
+                               settings.Text = "Quincena y fin de mes";
 
-                   }).GetHtml()
+                           }).GetHtml()
                         @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                     </div>
                 </div>
