--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_CmbProveedor_CXP.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_CmbProveedor_CXP.cshtml
@@ -11,7 +11,7 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
-        settings.Properties.TextFormatString = " [{0}] {1} {2}";
+        settings.Properties.TextFormatString = "{2}";//No muevan esto
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
