--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_008.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_008.cshtml
@@ -8,7 +8,7 @@
         Response.Redirect("~/Account/Login");
     }
 }
-<script type="text/javascript">
+@*<script type="text/javascript">
     var textSeparator = ";";
     function updateText() {
         var selectedItems = IntArray.GetSelectedItems();
@@ -37,7 +37,7 @@
         }
         return actualValues;
     }
-</script>
+</script>*@
 
 @using (Html.BeginForm("BAN_008", "BancoReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 
@@ -67,7 +67,7 @@
                         <div class="form-group">
                             <label for="IdSucursal">Sucursal</label>
 
-                            @Html.DevExpress().DropDownEditFor(q => q.IntArray, settings =>
+                            @*@Html.DevExpress().DropDownEditFor(q => q.IntArray, settings =>
                        {
                            settings.Name = "checkComboBox";
                            settings.Width = Unit.Percentage(100);
@@ -106,9 +106,9 @@
                            settings.Properties.AnimationType = AnimationType.None;
                            settings.Properties.ClientSideEvents.TextChanged = "synchronizeListBoxValues";
                            settings.Properties.ClientSideEvents.DropDown = "synchronizeListBoxValues";
-                       }).GetHtml()
+                       }).GetHtml()*@
 
-                            @*Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco, "IdBanco", "ba_descripcion"), new { @class = "form-control" })*@
+                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_suc, "Su_Descripcion", "IdSucursal"), new { @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                         </div>
                     </div>
