--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
@@ -112,7 +112,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Contabilizar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index2","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
