--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/Nuevo.cshtml
@@ -34,8 +34,9 @@
     });
 
     function EditingUpdate(ID) {
-        var datos = {
-            IdPk: ID
+        var datos = {            
+            IdPk: ID,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -58,7 +59,8 @@
     function CargarMovimientos() {
             var datos = {
                 IdBanco: $("#IdBanco").val(),
-                IdPeriodo: $("#IdPeriodo").val()
+                IdPeriodo: $("#IdPeriodo").val(),
+                IdTransaccionSession: $("#IdTransaccionSession").val()
             }
         $.ajax({
             type: 'POST',
