--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_det.cshtml
@@ -31,6 +31,11 @@
         settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = false;
         settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
 
+        //Configuración filtro por columna
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
 
         settings.Columns.Add(column =>
         {
