--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_x_cruzar.cshtml
@@ -30,6 +30,11 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
+        //Configuración filtro por columna
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
 
         settings.Columns.Add(column =>
         {
