--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
@@ -16,7 +16,7 @@
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
 
-        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsContextMenu.Enabled = false;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
