--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/_ViewStart.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 ﻿@{
-    Layout = "~/Areas/Contabilidad/Views/Shared/_Layout.cshtml";
+    Layout = null; //"~/Areas/Contabilidad/Views/Shared/_Layout.cshtml";
 }
