--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/_ViewStart.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 ﻿@{
-    Layout = "~/Areas/CuentasPorCobrar/Views/Shared/_Layout.cshtml";
+    Layout = null; //"~/Areas/CuentasPorCobrar/Views/Shared/_Layout.cshtml";
 }
