--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/_ViewStart.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 ﻿@{
-    Layout = "~/Areas/Inventario/Views/Shared/_Layout.cshtml";
+    Layout = null;//"~/Areas/Inventario/Views/Shared/_Layout.cshtml";
 }
