--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
@@ -57,18 +57,37 @@
 
 
         settings.Columns.Add("secuencia", "#").Width = Unit.Percentage(2);
+        //settings.Columns.Add(column =>
+        //{
+        //    column.FieldName = "IdCtaCble";
+        //    column.Caption = "Cuenta contable";
+        //    column.Width = Unit.Percentage(30);
+        //    column.EditorProperties().ComboBox(p =>
+        //    {
+        //        p.Columns.Add("IdCtaCble", "Código").Width = Unit.Percentage(30);
+        //        p.Columns.Add("pc_Cuenta", "Cuenta").Width = Unit.Percentage(70);
+        //        p.ValueField = "IdCtaCble";
+        //        p.ValueType = typeof(string);
+        //        p.DataSource = ViewBag.lst_cuentas;
+        //    });
+        //});
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta contable";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble";
-            column.Caption = "Cuenta contable";
-            column.Width = Unit.Percentage(30);
-            column.EditorProperties().ComboBox(p =>
+            column.Caption = "Cuenta contble";
+            column.Width = Unit.Percentage(35);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
             {
-                p.Columns.Add("IdCtaCble", "Código").Width = Unit.Percentage(30);
-                p.Columns.Add("pc_Cuenta", "Cuenta").Width = Unit.Percentage(70);
-                p.ValueField = "IdCtaCble";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_cuentas;
+                Html.RenderPartial("_CmbCuenta_sueldos", DataBinder.Eval(c.DataItem, "IdCtaCble"));
             });
         });
         settings.Columns.Add("dc_Observacion", "Descripción").Width=Unit.Percentage(40);
