--- a/ERP/Core.Erp.Web/Areas/Banco/Views/_ViewStart.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
-﻿@{
-    Layout = null//"~/Areas/Banco/Views/Shared/_Layout.cshtml";
+﻿@{  
+    Layout = null; //"~/Areas/Caja/Views/Shared/_Layout.cshtml";
 }
