--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
@@ -9,6 +9,7 @@
         settings.KeyFieldName = "secuencia";
         settings.Width = Unit.Percentage(100);
 
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ProcesarRol", Action = "EditingUpdate" };
 
 
         //Configuración para que la grilla no muestre texto completo
