--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
@@ -11,6 +11,15 @@
 
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ProcesarRol", Action = "EditingUpdate" };
 
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsBehavior.ConfirmDelete = true;
+        settings.Width = Unit.Percentage(100);
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowNewButton = false;
+        settings.CommandColumn.ShowDeleteButton = false;
+
+
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
